--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,19 @@
 
   {%- include head.html -%}
 
-  <body>
+  <body class="{{ layout.body_class }}">
 
-    {%- include header.html -%}
+    {% unless layout.hide_header %}
+      {%- include header.html -%}
+    {% endunless %}
 
     <main class="page-content" aria-label="Content">
       {{ content }}
     </main>
 
-    {%- include footer.html -%}
+    {% unless layout.hide_footer %}
+      {%- include footer.html -%}
+    {% endunless %}
 
   </body>
 
