--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,9 @@
 
   {%- seo -%}
 
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
   {%- feed_meta -%}
