--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
+  <link rel="icon" type="image/png" href="/favicon.ico">
+
   {%- feed_meta -%}
 </head>
 
